# sec-microservice-sells

./: Dockerfile  docker-compose.yaml  pyrightconfig.json
.github/workflows/: deploy.yml  pylint.yml  tests.yml
backend/: .pylintrc  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  data_hash.py  jwt_utils.py  settings.py
backend/app/db/: __init__.py  base.py  conn.py  settings.py
backend/app/messages/: async_broker.py  client.py  event.py  subscriber.py
backend/app/middlewares/: auth.py  send_message.py
backend/app/models/: __init__.py  api_response.py  enterprise.py  role.py  scope.py  sell.py  token.py  user.py
backend/app/router/: __init__.py  liveness.py  sell.py  utils.py
backend/tests/: conftest.py  manage_jwt_test.py  message_receive_test.py  sells_enpoint_test.py  test_message_send.py  token_endpoint_test.py  user_model_test.py
k8s/: deploy.yaml  minions.yml
