[tool.poetry]
name = "sec-microservice-rh"
version = "0.1.0"
description = ""
authors = ["Adrian Soares <adrianlopesswe@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "~2.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pika = "^1.3.2"
aio-pika = "^9.4.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pytest-asyncio = "^0.23.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.3.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
